--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "core-js": "^3.1.4",
+    "focus-visible": "^5.1.0",
+    "lodash": "^4.17.15",
+    "node-sass": "^4.11.0",
     "react": "^16.13.1",
+    "react-app-polyfill": "^1.0.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "2.1.8",
+    "react-transition-group": "1.x",
+    "urijs": "^1.19.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3030 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -22,7 +29,10 @@
   "browserslist": {
     "production": [
       ">0.2%",
+      "since 2015",
       "not dead",
+      "ie >= 11",
+      "safari >= 8",
       "not op_mini all"
     ],
     "development": [
